# content-based-filtering-model

./: README.md  pyproject.toml
data/examples-documents/: doc-01.txt  doc-02.txt
src/: airam.py  cli.py  izan.py  main.py
src/content_based_filtering_model/: __init__.py
