[project]
name = "content-based-filtering-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "4lbxrtz", email = "4lbxrtz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
content-based-filtering-model = "content_based_filtering_model:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
