[project]
name = "content-based-filtering-model"
version = "0.1.0"
description = "Sistemas de recomendación. Modelos basados en el contenido."
readme = "README.md"
authors = [{ name = "4lbxrtz", email = "4lbxrtz@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "tabulate>=0.9.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
content-based-filtering-model = "main:main"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "B", "C4", "UP", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = ["ruff>=0.14.2"]
